--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 					<a href="/">
 						<img src="img/logo.svg" alt="Akademnashr" width="228" height="60" />
 					</a>
-					<ul>
-						<li>
-							<a href="/">
+					<ul class="footer-list">
+						<li class="footer-item">
+							<a class="footer-social" href="/">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 									<path
 										d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 12 0ZM17.568 8.16C17.388 10.056 16.608 14.664 16.212 16.788C16.044 17.688 15.708 17.988 15.396 18.024C14.7 18.084 14.172 17.568 13.5 17.124C12.444 16.428 11.844 15.996 10.824 15.324C9.636 14.544 10.404 14.112 11.088 13.416C11.268 13.236 14.34 10.44 14.4 10.188C14.412 10.152 14.412 10.044 14.34 9.972C14.268 9.912 14.172 9.936 14.088 9.948C13.98 9.972 12.3 11.088 9.024 13.296C8.544 13.62 8.112 13.788 7.728 13.776C7.296 13.764 6.48 13.536 5.868 13.332C5.112 13.092 4.524 12.96 4.572 12.54C4.596 12.324 4.896 12.108 5.46 11.88C8.964 10.356 11.292 9.348 12.456 8.868C15.792 7.476 16.476 7.236 16.932 7.236C17.028 7.236 17.256 7.26 17.4 7.38C17.52 7.476 17.556 7.608 17.568 7.704C17.556 7.776 17.58 7.992 17.568 8.16Z"
@@ -124,8 +124,8 @@
 								</svg>
 							</a>
 						</li>
-						<li>
-							<a href="/">
+						<li class="footer-item">
+							<a class="footer-social" href="/">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 									<path
 										d="M22.675 0H1.325C0.593 0 0 0.593 0 1.325V22.676C0 23.407 0.593 24 1.325 24H12.82V14.706H9.692V11.084H12.82V8.413C12.82 5.313 14.713 3.625 17.479 3.625C18.804 3.625 19.942 3.724 20.274 3.768V7.008L18.356 7.009C16.852 7.009 16.561 7.724 16.561 8.772V11.085H20.148L19.681 14.707H16.561V24H22.677C23.407 24 24 23.407 24 22.675V1.325C24 0.593 23.407 0 22.675 0Z"
@@ -133,8 +133,8 @@
 								</svg>
 							</a>
 						</li>
-						<li>
-							<a href="/">
+						<li class="footer-item">
+							<a class="footer-social" href="/">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 									<path
 										fill-rule="evenodd"
@@ -146,6 +146,69 @@
 						</li>
 					</ul>
 				</div>
+				<hr class="footer-hr" />
+				<!-- <div class="footer-bottom-list">
+					<ul>
+						<li class="footer-">
+							<a href="#">Bosh sahifa</a>
+						</li>
+						<li class="footer-bottom-text">
+							<a href="#">Kitoblar</a>
+						</li>
+						<a href="#">Aksiyalar</a>
+						<li class="footer-bottom-text">
+							<a href="#">Yangiliklar</a>
+						</li>
+						<li class="footer-bottom-text">
+							<a href="#">Kontaktlar</a>
+						</li>
+					</ul>
+					<ul class="footer-bottom-list">
+						<li>
+							<a href="#">Ilmiy nashrlar</a>
+						</li>
+						<li>
+							<a href="#">Ilmiy-ommabop nashrlar</a>
+						</li>
+						<li>
+							<a href="#">Ma’rifiy nashrlar</a>
+						</li>
+						<li>
+							<a href="#">Lug’atlar</a>
+						</li>
+						<li>
+							<a href="#">Adabiy-badiiy nashrlar</a>
+						</li>
+						<li>
+							<a href="#">Abituriyentlar uchun</a>
+						</li>
+						<li>
+							<a href="#">Bolalar uchun</a>
+						</li>
+					</ul>
+					<ul class="footer-bottom-list">
+						<li>
+							<a href="#">Ko’p so’raladigan savollar</a>
+						</li>
+						<li>
+							<a href="#">Yetkazib berish haqida</a>
+						</li>
+						<li>
+							<a href="#">To’lov usullari haqida</a>
+						</li>
+					</ul>
+					<ul>
+						<li>
+							<a href="#">Bo’sh ish o’rinlari</a>
+						</li>
+						<li>
+							<a href="#">Biz bilan bog’lanish</a>
+						</li>
+						<li>
+							<a href="#">Maxfiylik nizomi</a>
+						</li>
+					</ul>
+				</div> -->
 			</div>
 		</footer>
 	</body>
