--- a/index.html
+++ b/index.html
@@ -12,77 +12,77 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<header class="header">
-			<div class="header-contaner contanier">
-				<a class="logo-link" href="/">
-					<img class="logo-img" src="img/logo.svg" alt="logo" width="227" height="60" />
+		<header class="sit-header">
+			<div class="site-header__contaner contanier">
+				<a class="site-logo__link" href="/">
+					<img class="site-logo__img" src="img/logo.svg" alt="logo" width="227" height="60" />
 				</a>
 				<nav>
-					<ul class="navbar-list">
-						<li class="navbar-item">
-							<a class="navbar-link" href="/">Bosh Sahifa</a>
+					<ul class="site-navbar__list">
+						<li class="site-navbar__item">
+							<a class="site-navbar__link" href="/">Bosh Sahifa</a>
 						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="/">Kitoblar</a>
+						<li class="site-navbar__item">
+							<a class="site-navbar__link" href="/">Kitoblar</a>
 						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="/">Aksiyalar</a>
+						<li class="site-navbar__item">
+							<a class="site-navbar__link" href="/">Aksiyalar</a>
 						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="/">Kontaktlar</a>
+						<li class="site-navbar__item">
+							<a class="site-navbar__link" href="/">Kontaktlar</a>
 						</li>
 					</ul>
 				</nav>
-				<button class="header-btn">Ro’yxatdan o’tish</button>
+				<button class="site-header__btn">Ro’yxatdan o’tish</button>
 			</div>
 		</header>
 		<main>
 			<section class="hero">
-				<div class="hero-contaner contanier">
-					<div class="hero-info">
-						<hr class="hero-hr" />
-						<h2 class="hero-title">Pythonda dasturlash asoslari</h2>
-						<p class="hero-text">
+				<div class="hero__contaner contanier">
+					<div class="hero__info">
+						<hr class="hero__hr" />
+						<h2 class="hero__title">Pythonda dasturlash asoslari</h2>
+						<p class="hero__text">
 							Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video
 							darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
 						</p>
-						<a class="hero-link" href="#">Buyurtma berish</a>
+						<a class="hero__link" href="#">Buyurtma berish</a>
 					</div>
 					<div>
-						<img class="hero-img" src="img/photo_2023-12-26_21-07-41.jpg" alt="paython book" width="510px" height="510px" />
+						<img class="hero__img" src="img/photo_2023-12-26_21-07-41.jpg" alt="paython book" width="510px" height="510px" />
 					</div>
 				</div>
 			</section>
 			<section class="feature">
 				<div class="contanier">
-					<hr class="feature-hr" />
-					<h2 class="feature-title">
+					<hr class="feature__hr" />
+					<h2 class="feature__title">
 						Nega aynan <br />
 						akademnashr?
 					</h2>
-					<ul class="feature-list">
-						<li class="feature-item">
-							<div class="feature-img-wrapper">
-								<img class="feature-img" src="img/cursor-click.svg" alt="feature-img" width="56px" height="56px" />
+					<ul class="feature__list">
+						<li class="feature__item">
+							<div class="feature-img__wrapper">
+								<img class="feature__img" src="img/cursor-click.svg" alt="feature-img" width="56px" height="56px" />
 							</div>
-							<h4 class="feature-list-title">Oson buyurtma qilish</h4>
-							<p class="feature-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+							<h4 class="feature-list__title">Oson buyurtma qilish</h4>
+							<p class="feature__text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
 						</li>
-						<li class="feature-item">
-							<div class="feature-img-wrapper">
-								<img class="feature-img" src="img/sparkles.svg" alt="feature-img" width="56px" height="56px" />
+						<li class="feature__item">
+							<div class="feature-img__wrapper">
+								<img class="feature__img" src="img/sparkles.svg" alt="feature-img" width="56px" height="56px" />
 							</div>
-							<h4 class="feature-list-title">Eng sara kitoblar</h4>
-							<p class="feature-text">
+							<h4 class="feature-list__title">Eng sara kitoblar</h4>
+							<p class="feature__text">
 								Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.
 							</p>
 						</li>
-						<li class="feature-item">
-							<div class="feature-img-wrapper">
-								<img class="feature-img" src="img/lightning-bolt.svg" alt="feature-img" width="56px" height="56px" />
+						<li class="feature__item">
+							<div class="feature-img__wrapper">
+								<img class="feature__img" src="img/lightning-bolt.svg" alt="feature-img" width="56px" height="56px" />
 							</div>
-							<h4 class="feature-list-title">Tez yetkazib berish</h4>
-							<p class="feature-text">
+							<h4 class="feature-list__title">Tez yetkazib berish</h4>
+							<p class="feature__text">
 								O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.
 							</p>
 						</li>
@@ -90,17 +90,17 @@
 				</div>
 			</section>
 			<section class="promotion">
-				<div class="promotion-contaner contanier">
-					<div class="promotion-info">
-						<h2 class="promotion-title">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-						<p class="promotion-text-top">
+				<div class="promotion__contaner contanier">
+					<div class="promotion__info">
+						<h2 class="promotion__title">Bolalar kitoblari uchun ajoyib aksiya!</h2>
+						<p class="promotion-text__top">
 							Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.
 						</p>
-						<p class="promotion-text-bottom">
+						<p class="promotion-text__bottom">
 							Aksiyadagi eng katta to’plamda <span class="promotion-text-color">50 ta kitob</span>ni
-							<span class="promotion-text-color"> 350 ming </span>so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
+							<span class="promotion-text__color"> 350 ming </span>so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
 						</p>
-						<a class="promotion-link" href="#">Buyurtma berish</a>
+						<a class="promotion__link" href="#">Buyurtma berish</a>
 					</div>
 					<div>
 						<img src="img/sale-img.svg" alt="sale-img" width="440px" height="440px" />
@@ -110,13 +110,13 @@
 		</main>
 		<footer class="footer">
 			<div class="contanier">
-				<div class="footer-top">
+				<div class="footer__top">
 					<a href="/">
 						<img src="img/logo.svg" alt="Akademnashr" width="228" height="60" />
 					</a>
-					<ul class="footer-list">
-						<li class="footer-item">
-							<a class="footer-social" href="/">
+					<ul class="footer__list">
+						<li class="footer__item">
+							<a class="footer__social" href="/">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 									<path
 										d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 12 0ZM17.568 8.16C17.388 10.056 16.608 14.664 16.212 16.788C16.044 17.688 15.708 17.988 15.396 18.024C14.7 18.084 14.172 17.568 13.5 17.124C12.444 16.428 11.844 15.996 10.824 15.324C9.636 14.544 10.404 14.112 11.088 13.416C11.268 13.236 14.34 10.44 14.4 10.188C14.412 10.152 14.412 10.044 14.34 9.972C14.268 9.912 14.172 9.936 14.088 9.948C13.98 9.972 12.3 11.088 9.024 13.296C8.544 13.62 8.112 13.788 7.728 13.776C7.296 13.764 6.48 13.536 5.868 13.332C5.112 13.092 4.524 12.96 4.572 12.54C4.596 12.324 4.896 12.108 5.46 11.88C8.964 10.356 11.292 9.348 12.456 8.868C15.792 7.476 16.476 7.236 16.932 7.236C17.028 7.236 17.256 7.26 17.4 7.38C17.52 7.476 17.556 7.608 17.568 7.704C17.556 7.776 17.58 7.992 17.568 8.16Z"
@@ -124,8 +124,8 @@
 								</svg>
 							</a>
 						</li>
-						<li class="footer-item">
-							<a class="footer-social" href="/">
+						<li class="footer__item">
+							<a class="footer__social" href="/">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 									<path
 										d="M22.675 0H1.325C0.593 0 0 0.593 0 1.325V22.676C0 23.407 0.593 24 1.325 24H12.82V14.706H9.692V11.084H12.82V8.413C12.82 5.313 14.713 3.625 17.479 3.625C18.804 3.625 19.942 3.724 20.274 3.768V7.008L18.356 7.009C16.852 7.009 16.561 7.724 16.561 8.772V11.085H20.148L19.681 14.707H16.561V24H22.677C23.407 24 24 23.407 24 22.675V1.325C24 0.593 23.407 0 22.675 0Z"
@@ -133,8 +133,8 @@
 								</svg>
 							</a>
 						</li>
-						<li class="footer-item">
-							<a class="footer-social" href="/">
+						<li class="footer__item">
+							<a class="footer__social" href="/">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 									<path
 										fill-rule="evenodd"
@@ -146,71 +146,8 @@
 						</li>
 					</ul>
 				</div>
-				<hr class="footer-hr" />
-				<!-- <div class="footer-bottom-list">
-					<ul>
-						<li class="footer-">
-							<a href="#">Bosh sahifa</a>
-						</li>
-						<li class="footer-bottom-text">
-							<a href="#">Kitoblar</a>
-						</li>
-						<a href="#">Aksiyalar</a>
-						<li class="footer-bottom-text">
-							<a href="#">Yangiliklar</a>
-						</li>
-						<li class="footer-bottom-text">
-							<a href="#">Kontaktlar</a>
-						</li>
-					</ul>
-					<ul class="footer-bottom-list">
-						<li>
-							<a href="#">Ilmiy nashrlar</a>
-						</li>
-						<li>
-							<a href="#">Ilmiy-ommabop nashrlar</a>
-						</li>
-						<li>
-							<a href="#">Ma’rifiy nashrlar</a>
-						</li>
-						<li>
-							<a href="#">Lug’atlar</a>
-						</li>
-						<li>
-							<a href="#">Adabiy-badiiy nashrlar</a>
-						</li>
-						<li>
-							<a href="#">Abituriyentlar uchun</a>
-						</li>
-						<li>
-							<a href="#">Bolalar uchun</a>
-						</li>
-					</ul>
-					<ul class="footer-bottom-list">
-						<li>
-							<a href="#">Ko’p so’raladigan savollar</a>
-						</li>
-						<li>
-							<a href="#">Yetkazib berish haqida</a>
-						</li>
-						<li>
-							<a href="#">To’lov usullari haqida</a>
-						</li>
-					</ul>
-					<ul>
-						<li>
-							<a href="#">Bo’sh ish o’rinlari</a>
-						</li>
-						<li>
-							<a href="#">Biz bilan bog’lanish</a>
-						</li>
-						<li>
-							<a href="#">Maxfiylik nizomi</a>
-						</li>
-					</ul>
-				</div> -->
+				<hr class="footer__hr" />
 			</div>
 		</footer>
 	</body>
 </html>
-``
